# AeroForesight-EU

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
dashboard/: live_foresight.html  static_demo.html  streamlit_app.py
live/: airports.js  ingest.js  package.json  predict.js  server.js
live/public/: demo.html  index.html
scripts/: publish_to_github.ps1
src/aeroforesight/: __init__.py  config.py
src/aeroforesight/data/: generate.py  loader.py
src/aeroforesight/features/: build.py
src/aeroforesight/mlops/: __init__.py  monitoring.py  pipeline.py  registry.py
src/aeroforesight/models/: __init__.py  business.py  dl_delay.py  forecast.py  llm_insights.py  rl_network.py
src/aeroforesight/serving/: __init__.py  api.py
tests/: test_smoke.py
