[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeroforesight-eu"
version = "0.1.0"
description = "European aviation intelligence & foresight platform (DL/RL/LLM/MLOps)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abhishek Hirve", email = "abhishek.hirve97@gmail.com" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dl = ["torch>=2.2"]
llm = ["anthropic>=0.40"]
dashboard = ["streamlit>=1.33", "plotly>=5.20"]
dev = ["pytest>=8.0"]

[project.scripts]
aeroforesight-pipeline = "aeroforesight.mlops.pipeline:run_pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
